<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword">

    <TextView
        android:id="@+id/textViewRestPasswordPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="103dp"
        android:text="@string/please_provide_us_with_your_email_and_we_will_email_you_a_reset_link"
        android:textAlignment="center"
        android:textColor="@color/SteelBlue"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextResetEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="234dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="214dp"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:background="@drawable/custom_buttons"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="110dp"
        android:layout_height="137dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginBottom="38dp"
        app:srcCompat="@mipmap/nutrition" />
</RelativeLayout>